<resources>
    <string name="app_name">TimeFlow</string>
    <string name="appName">TimeFlow</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="don_t_have_an_account">DONT HAVE AN ACCOUNT?</string>
    <string name="register">REGISTER</string>
    <string name="forgot_password">Forgot Password</string>
    <string name="slogan">Let’s make every minute count.</string>
    <string name="log_in">Log in</string>
    <string name="required">Required*</string>
    <string name="have_a_account">HAVE A ACCOUNT?</string>
    <string name="login">LOG IN</string>
    <string name="logout">LOG OUT</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="name">Name</string>
    <string name="sign_up">Sign up</string>
    <string name="loading">loading...</string>
    <string name="remember_me">Remember me?</string>
    <string name="reset">Reset</string>
    <string name="reset_password">Reset Password</string>
    <string name="log_out">Log out</string>
    <string name="open_nav">Open navigation draw</string>
    <string name="close_nav">Close navigation draw</string>
    <string name="task">TASKS</string>
    <string name="calendar">CALENDAR</string>
    <string name="analytics">ANALYTICS</string>
    <string name="archived_tasks">ARCHIVED TASKS</string>
    <string name="settings">SETTINGS</string>
    <string name="notes">NOTES</string>
    <string name="pomodoro">POMODORO</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="upcoming">Upcoming</string>
    <string name="this_week">This Week</string>
    <string name="today">Today</string>
    <string name="category">Category</string>
    <string name="create_task">CREATE TASK</string>
    <string name="cover_image">Cover Image</string>
    <string name="task_title">Task Title</string>
    <string name="date">Date</string>
    <string name="min_hours">Min Hours</string>
    <string name="max_hours">Max Hours</string>
    <string name="add_category">Add Category</string>
    <string name="add">Add</string>
    <string name="task_time">Task Time</string>
    <string name="task_date">Task Date</string>
    <string name="archive_task">ARCHIVE TASK</string>
    <string name="from">From</string>
    <string name="to">To</string>
    <string name="task_history">Task History</string>
    <string name="placeholder">placeHolder</string>
    <string name="save">Save</string>
    <string name="title">Title</string>
    <string name="disable">disable\n</string>
    <string name="chip">chip</string>
    <string name="enable">enable</string>
    <string name="cancel">Cancel</string>
    <string name="ok">OK</string>
    <string name="hour_min_you_want_to_spend_on_your_project">Hour/Min to spend project</string>
    <string name="are_you_sure_you_want_to_delete_the_task">Are you sure you want to delete the task?</string>
    <string name="start">START</string>
    <string name="stop">STOP</string>
    <string name="select_photo">Select Photo</string>
    <string name="enter_description">Enter description</string>
    <string name="task_description">Task Description</string>
    <string name="filter_by_category_off">Filter by category : OFF</string>
    <string name="filter_by_category_on">Filter by category : ON</string>
    <string name="a_link_has_been_sent_to_your_email_please_verify_it">A link has been sent to your email. Please verify it.</string>
    <string name="minimum_duration_hours">Minimum Duration (Hours)</string>
    <string name="maximum_duration_hours">Maximum Duration (Hours)</string>
    <string name="user_icon">User Icon</string>
    <string name="user_name">User Name</string>
    <string name="user_email">user@example.com</string>
    <string name="manage_account">Manage Account</string>
    <string name="general">General</string>
    <string name="enter_pomodoro_minutes">Enter Pomodoro Minutes</string>
    <string name="_00_00_00">00:00:00</string>
    <string name="pause">Pause</string>
    <string name="new_note">New note</string>
    <string name="add_note">Add note</string>
    <string name="task_duration">Task Duration</string>
    <string name="to_do">To Do</string>
    <string name="done">Done</string>
    <string name="add_new_note">Add New Note</string>
    <string name="create">Create</string>
    <string name="description">Description</string>
    <string name="note_title">Note Title</string>
    <string name="high">High</string>
    <string name="medium">Medium</string>
    <string name="low">Low</string>
    <string name="importance">Importance</string>
    <string name="create_note">Create Note</string>


</resources>