<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn = "navigation_view">

    <group
        android:checkableBehavior="single">

        <item
            android:id="@+id/nvTask"
            android:icon="@drawable/task"
            android:title="@string/task"/>

        <item
            android:id="@+id/nvCalendar"
            android:icon="@drawable/calendar"
            android:title="@string/calendar"/>

        <item
            android:id="@+id/nvAnalytics"
            android:icon="@drawable/analytics"
            android:title="@string/analytics"/>

        <item
            android:id="@+id/nvArchivedTasks"
            android:icon="@drawable/archive"
            android:title="@string/archived_tasks"/>

        <item
            android:id="@+id/nvNotes"
            android:icon="@drawable/notes"
            android:title="@string/notes"/>

        <item
            android:id="@+id/nvPomodoro"
            android:icon="@drawable/pomodoro"
            android:title="@string/pomodoro"/>

        <item
            android:id="@+id/nvSettings"
            android:icon="@drawable/settings"
            android:title="@string/settings"/>



    </group>

    <item
        android:title="">
        <menu>

            <item
            android:id="@+id/nvLogout"
            android:icon="@drawable/logout"
            android:title="@string/log_out"
            android:iconTint="@android:color/holo_red_dark"/>

        </menu>

    </item>

</menu>