<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="5dp"
    android:paddingTop ="5dp"
    android:paddingHorizontal="5dp">

 <!-- Filter Container -->
 <LinearLayout
     android:id="@+id/categoryMainFilterContainer"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:orientation="vertical"
     android:layout_alignParentTop="true">

  <!-- Toggle Button -->
  <Button
      android:id="@+id/btnToggleCategoryFilter"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:text="@string/filter_by_category_off" />

  <!-- Category Filter Container -->
  <LinearLayout
      android:id="@+id/categoryFilterContainer"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:orientation="vertical"
      android:visibility="gone">

   <!-- ChipGroup for Categories -->
   <com.google.android.material.chip.ChipGroup
       android:id="@+id/chipGroupCategoryFilter"
       android:layout_width="match_parent"
       android:layout_height="wrap_content"
       android:background="@drawable/rounded_background_gray"/>
  </LinearLayout>
 </LinearLayout>

 <!-- Task ScrollView -->
 <androidx.core.widget.NestedScrollView
     android:id="@+id/scrollViewTasks"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:layout_below="@id/categoryMainFilterContainer"
     android:layout_above="@id/btnArchivedTasks"
     android:fillViewport="true">

  <LinearLayout
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:orientation="vertical"
      android:id="@+id/parentLinearLayout"
      android:padding="16dp">

   <!-- Section for TODAY tasks -->
   <TextView
       android:id="@+id/tvToday"
       android:layout_width="wrap_content"
       android:layout_height="wrap_content"
       android:text="@string/today"
       android:textSize="18sp"
       android:textStyle="bold"
       android:layout_marginBottom="8dp"
       android:gravity="top|start"/>

   <androidx.recyclerview.widget.RecyclerView
       android:id="@+id/rvToday"
       android:layout_width="match_parent"
       android:layout_height="wrap_content"
       android:layout_marginBottom="16dp"
       />

   <!-- Section for THIS WEEK tasks -->
   <TextView
       android:id="@+id/tvThisWeek"
       android:layout_width="wrap_content"
       android:layout_height="wrap_content"
       android:text="@string/this_week"
       android:textSize="18sp"
       android:textStyle="bold"
       android:layout_marginBottom="8dp" />

   <androidx.recyclerview.widget.RecyclerView
       android:id="@+id/rvThisWeek"
       android:layout_width="match_parent"
       android:layout_height="wrap_content"
       android:layout_marginBottom="16dp" />

   <!-- Section for UPCOMING tasks -->
   <TextView
       android:id="@+id/tvUpcoming"
       android:layout_width="wrap_content"
       android:layout_height="wrap_content"
       android:text="@string/upcoming"
       android:textSize="18sp"
       android:textStyle="bold"
       android:layout_marginBottom="8dp" />

   <androidx.recyclerview.widget.RecyclerView
       android:id="@+id/rvUpcoming"
       android:layout_width="match_parent"
       android:layout_height="wrap_content"
       android:layout_marginBottom="16dp" />

  </LinearLayout>

 </androidx.core.widget.NestedScrollView>

 <!-- Archived Tasks Button at the bottom -->
 <Button
     android:id="@+id/btnArchivedTasks"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:layout_alignParentBottom="true"
     android:text="@string/archived_tasks"
     android:textColor="@color/black"
     tools:ignore="TextContrastCheck,VisualLintButtonSize"
     android:gravity="center"
     android:backgroundTint="@color/lightTeal"/>

 <!-- Floating Action Button -->
 <com.google.android.material.floatingactionbutton.FloatingActionButton
     android:id="@+id/fabAddTask"
     android:layout_width="wrap_content"
     android:layout_height="wrap_content"
     android:layout_alignParentEnd="true"
     android:layout_alignParentBottom="true"
     android:layout_marginEnd="15dp"
     android:layout_marginBottom="60dp"
     android:backgroundTint="@color/purple"
     android:importantForAccessibility="no"
     android:src="@drawable/add"
     android:tint="@android:color/white"
     tools:ignore="RelativeOverlap,SpeakableTextPresentCheck" />

</RelativeLayout>
